--- a/WorkingWithVisualStudio/package.json
+++ b/WorkingWithVisualStudio/package.json
@@ -3,6 +3,6 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "bootstrap": "4.0.0-alpha.6"
+    "bootstrap": "^4.0.0-alpha.6"
   }
 }
